--- a/app/src/main/res/layout/fragment_sneaker.xml
+++ b/app/src/main/res/layout/fragment_sneaker.xml
@@ -38,9 +38,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
+        android:id="@+id/recycleView"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_below="@id/t2"/>
+        android:layout_below="@id/t2"
+        android:layout_marginTop="10dp" />
 
 
 
